--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@
 
 body {
     background:  radial-gradient(rgba(24, 77, 175, 0.89), blue);
-    min-height: 100vh    
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .img-header{
-    height: 195px;
-    display: block; 
-    margin: 0 auto;
+    width: 170px;
 }
 
 main {
@@ -118,4 +120,52 @@ button:active {
     font-size: 11px;
     margin-bottom: 0;
     margin-top: 35px;
+    align-self: baseline;
+    justify-content: end;
+}
+
+@media(max-width: 431px) {
+    body {
+        max-height: 100vh;
+    }
+    .img-header {
+        width: 150px;
+    }
+    main {
+        padding: 17px;
+    }
+    select, input, button {
+        height: 35px;
+    }
+    .p-value {
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 380px) {
+    main {
+        width: 320px;
+    }
+    .img-header {
+        width: 125px;
+    }
+    main {
+        padding: 15px;
+    }
+    select, input, button {
+        height: 30px;
+        margin-bottom: 3px;
+    }
+    .currency-section {
+        padding: 10px;
+    }
+    .currency {
+        gap: 1.5px;
+    }
+    .p-value {
+        font-size: 20px;
+    }
+    .footer {
+        margin-top: 17px;
+    }
 }
